// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  TEACHER
  SECRETARY
  STUDENT
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      Role     @default(STUDENT)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  student   Student?
  teacher   Teacher?
  auditLogs AuditLog[]
}

model Student {
  id          String   @id @default(uuid())
  userId      String   @unique
  studentId   String   @unique // Registration number (e.g. INPTIC-2024-XXX)
  firstName   String
  lastName    String
  class       String   // e.g. "LP ASUR"
  birthDate   DateTime?
  birthPlace  String?
  bacType     String?
  provenance  String?  // Etablissement d'origine
  
  user        User     @relation(fields: [userId], references: [id])
  grades      Grade[]
  attendances Attendance[]
}

model Class {
  id        String   @id @default(uuid())
  name      String   @unique // e.g. "LP ASUR"
  createdAt DateTime @default(now())
}

model AcademicYear {
  id        String   @id @default(uuid())
  label     String   @unique // e.g. "2025-2026"
  isActive  Boolean  @default(false)
  createdAt DateTime @default(now())
}

model Teacher {
  id        String    @id @default(uuid())
  userId    String    @unique
  firstName String
  lastName  String

  user      User      @relation(fields: [userId], references: [id])
  subjects  Subject[] // Subjects taught by this teacher
}

model Semester {
  id        String   @id @default(uuid())
  name      String   // e.g. "S5", "S6"
  year      String   // e.g. "2024-2025"
  isActive  Boolean  @default(false)
  isLocked  Boolean  @default(false) // If true, only ADMIN can modify grades/attendances

  ues       UE[]
}

model UE {
  id         String   @id @default(uuid())
  code       String?  // e.g. "UE5-1"
  name       String   // e.g. "Outils de base"
  credits    Int      // e.g. 9
  semesterId String
  
  semester   Semester @relation(fields: [semesterId], references: [id])
  subjects   Subject[]
}

model Subject {
  id          String   @id @default(uuid())
  name        String   // e.g. "Anglais"
  coefficient Float    @default(1.0)
  credits     Int      @default(2) // Subject credits
  ccWeight    Float    @default(0.4) // Weight for Continuous Assessment (e.g., 0.4 for 40%)
  examWeight  Float    @default(0.6) // Weight for Final Exam (e.g., 0.6 for 60%)
  ueId        String
  teacherId   String?

  ue          UE       @relation(fields: [ueId], references: [id])
  teacher     Teacher? @relation(fields: [teacherId], references: [id])
  grades      Grade[]
  attendances Attendance[]
}

model Grade {
  id             String   @id @default(uuid())
  ccGrade        Float?   // Controle Continu (40%)
  examGrade      Float?   // Final Exam (60%)
  rattrapageGrade Float?   // If applicable, replaces examGrade

  studentId      String
  subjectId      String

  student        Student  @relation(fields: [studentId], references: [id])
  subject        Subject  @relation(fields: [subjectId], references: [id])

  @@unique([studentId, subjectId])
}

model Attendance {
  id          String   @id @default(uuid())
  hoursAbsent Int      @default(0)
  studentId   String
  subjectId   String
  
  student     Student  @relation(fields: [studentId], references: [id])
  subject     Subject  @relation(fields: [subjectId], references: [id])
}

model AuditLog {
  id        String   @id @default(uuid())
  userId    String
  action    String   // e.g. "UPDATE_GRADE", "ENTER_ATTENDANCE"
  entity    String   // e.g. "Grade", "Attendance"
  entityId  String
  oldData   Json?
  newData   Json?
  timestamp DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id])
}
