@startuml
' Synchronisé avec prisma/schema.prisma — à régénérer manuellement à chaque modification d'un modèle.

package "Entités" {
  enum Role {
    ADMIN
    TEACHER
    SECRETARY
    STUDENT
  }

  class User {
    +id: String
    +email: String
    +password: String
    +role: Role
    +createdAt: DateTime
    +updatedAt: DateTime
  }

  class Student {
    +id: String
    +userId: String
    +studentId: String
    +firstName: String
    +lastName: String
    +class: String
    +birthDate: DateTime?
    +birthPlace: String?
    +bacType: String?
    +provenance: String?
  }

  class Teacher {
    +id: String
    +userId: String
    +firstName: String
    +lastName: String
  }

  class Class {
    +id: String
    +name: String
    +createdAt: DateTime
  }

  class AcademicYear {
    +id: String
    +label: String
    +isActive: Boolean
    +createdAt: DateTime
  }

  class Semester {
    +id: String
    +name: String
    +year: String
    +isActive: Boolean
    +isLocked: Boolean
  }

  class UE {
    +id: String
    +code: String?
    +name: String
    +credits: Int
    +semesterId: String
  }

  class Subject {
    +id: String
    +name: String
    +coefficient: Float
    +credits: Int
    +ccWeight: Float
    +examWeight: Float
    +ueId: String
    +teacherId: String?
  }

  class Grade {
    +id: String
    +ccGrade: Float?
    +examGrade: Float?
    +rattrapageGrade: Float?
    +studentId: String
    +subjectId: String
  }

  class Attendance {
    +id: String
    +hoursAbsent: Int
    +studentId: String
    +subjectId: String
  }

  class AuditLog {
    +id: String
    +userId: String
    +action: String
    +entity: String
    +entityId: String
    +oldData: Json?
    +newData: Json?
    +timestamp: DateTime
  }
}

User "1" -- "0..1" Student
User "1" -- "0..1" Teacher
User "1" -- "many" AuditLog
Semester "1" *-- "many" UE
UE "1" *-- "many" Subject
Teacher "1" -- "many" Subject : enseigne
Student "1" -- "many" Grade
Subject "1" -- "many" Grade
Student "1" -- "many" Attendance
Subject "1" -- "many" Attendance

note bottom of Class
  Liste de référence autonome (nom uniquement), utilisée pour
  alimenter les listes déroulantes. Student.class est un champ
  texte libre, pas une clé étrangère vers Class — les deux sont
  synchronisés par l'application, pas par le schéma.
end note

note bottom of AcademicYear
  Même logique que pour Class : Semester.year est un champ
  texte libre, pas une clé étrangère vers AcademicYear.
end note

package "Services NestJS" {
  class AuthService
  class UsersService
  class AcademicService
  class GradesService
  class ExportsService
  class SettingsService
}

AuthService ..> "authentifie" User
UsersService ..> "gère" User
UsersService ..> "gère" Student
UsersService ..> "gère" Teacher
AcademicService ..> "gère" Semester
AcademicService ..> "gère" UE
AcademicService ..> "gère" Subject
AcademicService ..> "gère" Class
AcademicService ..> "gère" AcademicYear
GradesService ..> "calcule les moyennes à partir de" Grade
GradesService ..> "calcule les pénalités à partir de" Attendance
ExportsService ..> "lit les rapports depuis" GradesService
ExportsService ..> "importe/exporte" Student
ExportsService ..> "importe/exporte" Grade
@enduml
